# isocore

./: CMakeLists.txt  gen_enums.py  gen_funcs.py
include/: app.hpp  camera.hpp  data.hpp  event.hpp  interfaces.hpp  log.hpp  registry.hpp  resource_manager.hpp  utils.hpp  window.hpp
include/interface/: bindable.hpp  drawable.hpp  gui_drawable.hpp  updateble.hpp
include/lighting/: light.hpp
include/object/: abstract.hpp  abstract_object.hpp  drawable.hpp  drawable_object.hpp
include/ogl/: enums.hpp  funcs.hpp  gl_objects.hpp  ogl.hpp  program.hpp  shader.hpp  state_manager.hpp  uniform_interface.hpp
include/pass/: pass.hpp
include/render/: buffer.hpp  frame_buffer.hpp  gui.hpp  model.hpp  render_buffer.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_layout.hpp
resources/objects/ball/: chrome_ball.mtl
resources/objects/location/: location.mtl
resources/objects/map/: de_dust2.mtl
resources/objects/sphere/: pbr_sphere.mtl
resources/shaders/: default.fs  default.vs  geometry.fs  light.fs  light.vs
src/: app.cpp  camera.cpp  main.cpp  window.cpp
src/object/: abstract_object.cpp  drawable_object.cpp
src/render/: gui.cpp  model.cpp  shader.cpp
